--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -340,7 +340,7 @@ hover:text-primary hover:before:!bg-primary ltr:before:mr-2 rtl:before:ml-2 dark
     }
 
     .btn-gradient {
-        @apply bg-gradient-to-r from-[#EF1262] to-[#4361EE] hover:to-[#EF1262] hover:from-[#4361EE] text-white;
+        @apply bg-gradient-to-r from-[#35654d] to-[#7ed56f] hover:to-[#35654d] hover:from-[#7ed56f] text-white;
     }
 
     /* Badge */
@@ -446,7 +446,7 @@ hover:text-primary hover:before:!bg-primary ltr:before:mr-2 rtl:before:ml-2 dark
 
     .form-checkbox.outline-primary:checked {
         @apply border-primary bg-transparent;
-        background-image: url("data:image/svg+xml,<svg viewBox='0 0 16 16' fill='%234361ee' xmlns='http://www.w3.org/2000/svg'><path d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/></svg>");
+        background-image: url("data:image/svg+xml,<svg viewBox='0 0 16 16' fill='%234caf50' xmlns='http://www.w3.org/2000/svg'><path d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/></svg>");
     }
     .form-checkbox.outline-secondary:checked {
         @apply border-secondary bg-transparent;
