--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -71,6 +71,12 @@ input[type='number'] {
     @apply !border-primary !shadow-none dark:!bg-[#121e32];
 }
 
+html,
+body,
+:root {
+    height: 100%;
+}
+
 @layer components {
     html {
         @apply scroll-smooth;
